// Copyright (c) YugaByte, Inc.

package yb.tserver;

option java_package = "org.yb.tserver";

import "yb/tserver/tserver.proto";

service TabletServerBackupService {
  rpc CreateTabletSnapshot(CreateTabletSnapshotRequestPB) returns (CreateTabletSnapshotResponsePB);
}

message CreateTabletSnapshotRequestPB {
  // UUID of server this request is addressed to.
  optional bytes dest_uuid = 1;

  optional bytes snapshot_id = 2;

  // Tablet to snapshot.
  optional bytes tablet_id = 3;

  optional fixed64 propagated_hybrid_time = 4;
}

message CreateTabletSnapshotResponsePB {
  optional TabletServerErrorPB error = 1;

  optional fixed64 propagated_hybrid_time = 2;
}
